force-app/main/default/objects/Infrastructure_Ship_to_Sales__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Infrastructure_Ship_to_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>