force-app/main/default/objects/Infrastructure_Ship_to_Sales__c/fields/Ship_to_Territory__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Territory__c</fullName>
    <label>Ship to Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTN</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>FLG</fullName>
            </value>
            <value>
                <fullName>MDW</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>PNY</fullName>
            </value>
            <value>
                <fullName>KMNO</fullName>
            </value>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>MID</fullName>
            </value>
            <value>
                <fullName>ILW</fullName>
            </value>
            <value>
                <fullName>IMOK</fullName>
            </value>
            <value>
                <fullName>AKW</fullName>
            </value>
            <value>
                <fullName>IMOW</fullName>
            </value>
            <value>
                <fullName>NCH</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>SEW</fullName>
            </value>
            <value>
                <fullName>CSEW</fullName>
            </value>
            <value>
                <fullName>CCTN</fullName>
            </value>
            <value>
                <fullName>CALM</fullName>
            </value>
            <value>
                <fullName>CFLG</fullName>
            </value>
            <value>
                <fullName>CMDW</fullName>
            </value>
            <value>
                <fullName>CNEW</fullName>
            </value>
            <value>
                <fullName>CPNY</fullName>
            </value>
            <value>
                <fullName>CMOK</fullName>
            </value>
            <value>
                <fullName>CCAS</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>ARLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>