force-app/main/default/objects/Infrastructure_Ship_to_Sales__c/fields/Updated_As_Of_del__c.field-meta.xml
<CustomField>
    <fullName>Updated_As_Of_del__c</fullName>
    <label>Updated As Of</label>
    <type>Date</type>
</CustomField>